; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavformat/extr_swfdec.c_get_swf_tag.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavformat/extr_swfdec.c_get_swf_tag.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AVERROR_EOF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @get_swf_tag to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_swf_tag(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = call i64 @avio_feof(i32* %8)
  %10 = icmp ne i64 %9, 0
  br i1 %10, label %11, label %13

11:                                               ; preds = %2
  %12 = load i32, i32* @AVERROR_EOF, align 4
  store i32 %12, i32* %3, align 4
  br label %29

13:                                               ; preds = %2
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @avio_rl16(i32* %14)
  store i32 %15, i32* %6, align 4
  %16 = load i32, i32* %6, align 4
  %17 = and i32 %16, 63
  store i32 %17, i32* %7, align 4
  %18 = load i32, i32* %6, align 4
  %19 = ashr i32 %18, 6
  store i32 %19, i32* %6, align 4
  %20 = load i32, i32* %7, align 4
  %21 = icmp eq i32 %20, 63
  br i1 %21, label %22, label %25

22:                                               ; preds = %13
  %23 = load i32*, i32** %4, align 8
  %24 = call i32 @avio_rl32(i32* %23)
  store i32 %24, i32* %7, align 4
  br label %25

25:                                               ; preds = %22, %13
  %26 = load i32, i32* %7, align 4
  %27 = load i32*, i32** %5, align 8
  store i32 %26, i32* %27, align 4
  %28 = load i32, i32* %6, align 4
  store i32 %28, i32* %3, align 4
  br label %29

29:                                               ; preds = %25, %11
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i64 @avio_feof(i32*) #1

declare dso_local i32 @avio_rl16(i32*) #1

declare dso_local i32 @avio_rl32(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
